--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </label>
             <button id="encryptBtn" onclick='encryptMessage("abcde", "bbbbb")'>Encrypt</button>
         </div>
-        <p id="result"></p>
+        <p id="result" class="hidden" onclick="copyResult()" oncontextmenu="copyResult()"></p>
     </div>
 
     <div style="flex: 1"></div>
